# PythonWebHW12

./: README.md  app.py  pyproject.toml
src/: routes.py  urls.py  views.py
templates/: index.html
